# sound-holoscopy-public

./: Pipfile  README.md  config.py  create_sample.py  pyproject.toml  run.bat  selected_files.json
desktop_ui/: __init__.py  __main__.py  interface.py
export/: __init__.py  colors.py  config.py  export.py  fft_export.py  wav_export.py
export/sheet_export/: metasheet_af.py  metasheet_aposx.py  metasheet_at.py  metasheet_fposx.py  metasheet_ft.py  sheet_export.py  utils.py
export/templates/: AbstractSheet.py  AfSheet.py  AposxSheet.py  AtSheet.py  FposxSheet.py  FractionSheet.py  FtSheet.py
export/test/: fixtures.py  test_colors.py  test_export.py  test_export_af_sheet.py  test_export_aposx_sheet.py  test_export_at_sheet.py  test_export_fposx_sheet.py  test_export_ft_sheet.py  test_template_fractions.py  test_template_metasheet_ft.py
resources/sheets/: template.xlsx  test_mono.xlsx  test_stereo.xlsx  test_surround.xlsx
signal_processing/: __init__.py  fft.py  signals.py
signal_processing/test/: test_signals.py
